applications/openeuler-obs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-obs
  name: openeuler-obs
