applications/openeuler-obs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: build-service
  namespace: openeuler-obs
  labels:
    app: openeuler-obs
spec:
  ports:
  - protocol: TCP
    port: 80

---
kind: Endpoints
apiVersion: v1
metadata:
  name: build-service
  namespace: openeuler-obs
  labels:
    app: openeuler-obs
subsets:
  - addresses:
      # These machines below are obs ecs
      - ip: 172.16.1.81
    ports:
      - port: 80
