applications/openeuler-obs/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: build-openatom-ingress
  namespace: openeuler-obs
spec:
  rules:
  - host: build.openeuler.openatom.cn
    http:
      paths:
      - backend:
          serviceName: build-service
          servicePort: 80
        path: /
  tls:
  - hosts:
    - build.openeuler.openatom.cn
    secretName: build-openatom-tls
